IMPALA-1865: Fix partition spilling cleanup when new stream OOMs

The partition spill code did not clean up properly if the new
serialization BufferedTupleStream fails to initialize (e.g. due
to OOM). The partition's hash table needs to be closed and set
to NULL otherwise the PAgg cleanup code will attempt to clean up
the hash table again.

Change-Id: Ic9d66a668f9a5d8ef45165d75d66e0065c2bf8b8
Reviewed-on: http://gerrit.cloudera.org:8080/226
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Internal Jenkins